Fixed Color Contrast errors

--- a/styles/base.css
+++ b/styles/base.css
@@ -11,7 +11,7 @@ header {
     flex-direction: column;
 }
 h1.course-title {
-    background-color: rgba(110, 110, 0, 0.745);
+    background-color: rgba(215, 215, 2, 0.745);
     font-size: 40px;
     text-align: center;
     padding: 20px;
@@ -73,9 +73,9 @@ h1.name {
     padding: 10px;
     margin-top: 0px;
     text-align: center;
-    background-color:  rgba(110, 110, 0, 0.745);
+    background-color:  rgba(215, 215, 2, 0.745);
     grid-column: 1 / 3;
-    color: white;
+    color: rgb(86, 84, 84);
 }
 
 section.card {
@@ -123,7 +123,7 @@ li {
 /*Footer*/
 
 footer {
-    background-color: rgba(189, 189, 0, 0.745);
+    background-color: rgba(215, 215, 2, 0.745);
     border: 2px solid black;
     text-align: center;
     height: 100px;
